# termic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/demo1/: CMakeLists.txt  main.cpp
include/: cell.h  input.h  samplers.h  size.h
include/termic/: app.h  canvas.h  cell.h  color.h  event.h  input.h  keycodes.h  layout.h  look.h  panel.h  samplers.h  screen-buffer.h  screen.h  size.h  stopwatch.h  style.h  terminal.h  text.h  timer.h  utf8.h
src/: CMakeLists.txt  app.cpp  app.h  canvas.cpp  canvas.h  color.cpp  demoapp.cpp  event.h  input.cpp  keycodes.cpp  keycodes.h  look.cpp  samplers.cpp  samplers.h  screen-buffer.cpp  screen-buffer.h  screen.cpp  screen.h  terminal.cpp  terminal.h  text.cpp  utf8.cpp
tests/: CMakeLists.txt  text.cpp
